# camera

./: .gitignore  README.md
LKA/: CMakeLists.txt
LKA/include/: det.hpp
LKA/src/: det.cpp  det.hpp  lka.cpp
LKA_DEAN/: LKA.hpp  LKA_func.cpp
LKA_DEAN/include/: LKA.hpp
LKA_DEAN/src/: LKA.cpp  LKA_func.cpp
learning_opencv3/: read_pic.cpp
learning_opencv3/RW_pixel/: CMakeLists.txt  example_02-09.cpp
learning_opencv3/canny_image/: CMakeLists.txt  example_02-07.cpp
learning_opencv3/compile/: dean.sh
learning_opencv3/load_smooth_image/: CMakeLists.txt  example_02-05.cpp
learning_opencv3/open_camera/: CMakeLists.txt  example_02-10.cpp
learning_opencv3/pyramid_down/: CMakeLists.txt  example_02-06.cpp
learning_opencv3/read_picture/: CMakeLists.txt  example_02-02.cpp
learning_opencv3/read_video/: CMakeLists.txt  example_02-03.cpp
learning_opencv3/slider_video/: CMakeLists.txt  example_02-04.cpp
learning_opencv3/write_avi_file/: CMakeLists.txt  example_02-11.cpp
